updated UI with menu handler